# superspace

./: Cargo.toml  default.nix  flake.nix
src/: config.rs  desktop_entries.rs  main.rs  state.rs
src/config/: deser_commands.rs
